# el3dec

./: CMakeLists.txt  CONTRIBUTORS  LICENSE.SUDL  README.md
apps/: CMakeLists.txt  app.cpp  netdaemon.cpp
contrib/: a-brokers-true-colors_dkbs-1662404347175.png.gpg  sanitize_samples.py  websocket_feed.py
include/el3dec/: lib.hpp  telemetry.hpp  utils.hpp
src/: CMakeLists.txt  lib.cpp  telemetry.cpp  utils.cpp
tests/: CMakeLists.txt  el3dec_libtest.cpp
tests/fixtures/: telemetry-samples.txt
